--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -47,12 +47,19 @@
 </head>
 <body>
 <div class="container">
-    <h1>Home Page</h1>
+    <h1>Zen by Aikido: Demo</h1>
+    <p>Demo explainer</p>
+</div>
+<div class="container">
+    <h2>Test different vulnerabilities: </h2>
     <a href="/pages/create" class="button">(SQL Injection) Create a dog</a>
     <a href="/pages/execute" class="button">(Shell Injection) Execute a command</a>
     <a href="/pages/request" class="button">(SSRF) Fetch a page</a>
     <a href="/pages/read" class="button">(Path Traversal) Read a file</a>
-
+</div>
+<div class="container">
+    <h2>Test rate-limited route: </h2>
+    <p>[rate-limiting explainer]</p>
 </div>
 </body>
 </html>
