whoami replaced by invalid-command

--- a/src/main/resources/execute_command.html
+++ b/src/main/resources/execute_command.html
@@ -87,7 +87,7 @@
     <form id="commandForm">
         <details>
             <summary>Examples</summary>
-            <code>whoami</code>
+            <code>invalid-command-here</code>
             <code>ls -la</code>
         </details>
         <label for="userCommand">Command input :</label>
