--- a/src/main/resources/request.html
+++ b/src/main/resources/request.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: monospace;
-            background: linear-gradient(to bottom, #A68BF7, #D1C6F9);
+            background: linear-gradient(to bottom, #EEE, #DDD);
             margin: 0;
             height: 100vh;
             padding: 20px;
@@ -17,9 +17,15 @@
             text-align: center;
             color: #24104F;
         }
+        .logo {
+            margin: 0px auto;
+            max-width: 175px;
+            display: block;
+            margin-bottom: 25px;
+        }
 
         .container {
-            max-width: 400px;
+            max-width: 750px;
             margin: 0 auto;
             background: #fff;
             padding: 20px;
@@ -83,6 +89,7 @@
     </style>
 </head>
 <body>
+<img src="/aikido_logo.svg" class="logo" />
 <div class="container">
     <h1>Fetch a page: </h1>
     <div id="urlForm">
