Use lighter black tint

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -69,7 +69,7 @@
         .code {
             display: block;
             width: auto;
-            background-color: black;
+            background-color: #2A2A2A;
             color: whitesmoke;
             padding: 5px;
             margin: 0px;
