Update margins for more spacing

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -23,11 +23,12 @@
             max-width: 175px;
             display: block;
             margin-bottom: 25px;
+            margin-top: 10px;
         }
 
         .container {
             max-width: 750px;
-            margin: 10px auto;
+            margin: 18px auto;
             background: #fff;
             padding: 20px;
             border-radius: 8px;
