Fix curl command

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -169,9 +169,9 @@ window.addEventListener('load', () => {
     <p>You can test our bot blocking features with the following button,
     this is equivalent to running the following curl command : </p>
     <code class="code">
-        curl <br/>
-        &emsp;&emsp;-H "User-Agent: Mozilla/5.0 (compatible; Bytespider/1.0; +http://bytespider.com/bot.html)" <br/>
-        &emsp;&emsp;-X GET https://zen-demo-java.fly.dev/test_bot_blocking
+        curl \<br/>
+        <span style="width: 20px; display: inline-block;"></span>-H "User-Agent: Mozilla/5.0 (compatible; Bytespider/1.0; +http://bytespider.com/bot.html)" \<br/>
+        <span style="width: 20px; display: inline-block;"></span>-X GET https://zen-demo-java.fly.dev/test_bot_blocking
     </code>
     <button class="button" id="bot_blocking1">Test bot blocking (Safe header)</button>
     <button class="button" id="bot_blocking2">Test bot blocking (Dangerous header)</button>
