Images redirect to /

--- a/src/main/resources/create.html
+++ b/src/main/resources/create.html
@@ -117,7 +117,7 @@
     </style>
 </head>
 <body>
-<img src="/aikido_logo.svg" class="logo" />
+<a href="/"><img src="/aikido_logo.svg" class="logo" /></a>
 <div class="container">
     <h1>Add a New Pet</h1>
     <details>
