--- a/src/main/resources/read_file.html
+++ b/src/main/resources/read_file.html
@@ -89,7 +89,7 @@
     </style>
 </head>
 <body>
-<img src="/aikido_logo.svg" class="logo" />
+<a href="/"><img src="/aikido_logo.svg" class="logo" /></a>
 <form class="container" action="/api/read">
     <h1>Read File: </h1>
     <details>
