--- a/src/main/resources/request.html
+++ b/src/main/resources/request.html
@@ -89,7 +89,7 @@
     </style>
 </head>
 <body>
-<img src="/aikido_logo.svg" class="logo" />
+<a href="/"><img src="/aikido_logo.svg" class="logo" /></a>
 <div class="container">
     <h1>Fetch a page: </h1>
     <div id="urlForm">
