--- a/src/main/resources/execute_command.html
+++ b/src/main/resources/execute_command.html
@@ -88,7 +88,7 @@
     </style>
 </head>
 <body>
-<img src="/aikido_logo.svg" class="logo" />
+<a href="/"><img src="/aikido_logo.svg" class="logo" /></a>
 <div class="container">
     <h1>Execute command: </h1>
     <form id="commandForm">
