Add explainer that we block tor traffic

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -179,6 +179,12 @@ window.addEventListener('load', () => {
         <br/>
     </code>
 </div>
+
+<div class="container">
+    <h2>IP Blocking</h2>
+    <p>To demo IP Blocking we blocked Tor IP addresses, you can test it out by opening this site <b>with the Tor Browser.</b></p>
+    <p>This feature is also useful to block certain countries (geo-ip blocking), or to block certain malicious actors.</p>
+</div>
 <br/>
 </body>
 </html>
