add a click here to clear dogs

--- a/src/main/resources/create.html
+++ b/src/main/resources/create.html
@@ -114,6 +114,10 @@
             padding: 10px 5px;
             border-radius: 5px;
         }
+        a {
+            color: #A68BF7;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -134,6 +138,7 @@
 
 <div class="container">
     <h1>Existing Pets</h1>
+    <p><a href="/clear">Click here</a> to clear all existing pets.</p>
     <div>
         <ul id="petsList">
 
