Add more bold text with ip blocking

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -250,7 +250,7 @@ window.addEventListener('load', () => {
 <div class="container">
     <h2>IP Blocking</h2>
     <p>To demo IP Blocking we blocked Tor IP addresses, you can test it out by opening this site <b>with the Tor Browser.</b></p>
-    <p>This feature is also useful to block certain countries (geo-ip blocking), or to block certain malicious actors.</p>
+    <p>This feature is also useful to block certain countries i.e. <b>geo-ip blocking</b>, or to block certain <b>malicious actors</b>.</p>
 </div>
 <br/>
 </body>
