make buttons in grid

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -78,6 +78,13 @@
             border-radius: 5px;
             font-weight: 700;
         }
+        .vuln-overview {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
+        .vuln-overview .button {
+            margin: 5px;
+        }
     </style>
     <script>
 window.addEventListener('load', () => {
@@ -194,10 +201,12 @@ window.addEventListener('load', () => {
 </div>
 <div class="container">
     <h2>Test different vulnerabilities: </h2>
-    <a href="/pages/create" class="button"><b>SQL Injection</b> | Create a dog</a>
-    <a href="/pages/execute" class="button"><b>Shell Injection</b> | Execute a command</a>
-    <a href="/pages/request" class="button"><b>SSRF</b> | Fetch a page</a>
-    <a href="/pages/read" class="button"><b>Path Traversal</b> | Read a file</a>
+    <div class="vuln-overview">
+        <a href="/pages/create" class="button"><b>SQL Injection</b> | Create a dog</a>
+        <a href="/pages/execute" class="button"><b>Shell Injection</b> | Execute a command</a>
+        <a href="/pages/request" class="button"><b>SSRF</b> | Fetch a page</a>
+        <a href="/pages/read" class="button"><b>Path Traversal</b> | Read a file</a>
+    </div>
 </div>
 <div class="container">
     <h2>Test rate-limiting and bot blocking</h2>
