Add resources more clearly

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -195,8 +195,9 @@ window.addEventListener('load', () => {
     <p>
         Zen, developed by Aikido, is designed to protect your web applications from a wide range of vulnerabilities.
         This is our Demo page where you can experiment with different types of injections and attacks. You can also test
-        our bot blocking and rate-limiting features! <br/>
-        <a href="https://aikido.dev/zen">Check out more</a> and start securing your web applications today!
+        our bot blocking and rate-limiting features! <br/> <br/>
+        → <a href="https://aikido.dev/zen">Install Zen</a> and start securing your web applications today! <br/>
+        → <a href="https://github.com/AikidoSec/firewall-java">GitHub page</a>
     </p>
 </div>
 <div class="container">
