--- a/src/main/resources/execute_command.html
+++ b/src/main/resources/execute_command.html
@@ -6,33 +6,7 @@
     <title>Zen Demo | Execute a command</title>
     <script async defer data-website-id="9b61da17-d763-4d51-a145-b6acce1d9f82" src="https://analytics.woutfeys.be/umami.js"></script>
     <style>
-        body {
-            font-family: monospace;
-            background: linear-gradient(to bottom, #EEE, #DDD);
-            margin: 0;
-            height: 100vh;
-            padding: 20px;
-        }
-
-        h1 {
-            text-align: center;
-            color: #24104F;
-        }
-        .logo {
-            margin: 0px auto;
-            max-width: 175px;
-            display: block;
-            margin-bottom: 25px;
-        }
-
-        .container {
-            max-width: 750px;
-            margin: 0 auto;
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
+        @import url('/css/general.css');
 
         label {
             display: block;
