--- a/src/main/resources/create.html
+++ b/src/main/resources/create.html
@@ -97,7 +97,7 @@
 <body>
 <a href="/"><img src="/aikido_logo.svg" class="logo" /></a>
 <div class="container">
-    <h1>Add a New Pet</h1>
+    <h1>SQL Injection | Create a new Pet</h1>
     <details>
         <summary>Examples</summary>
         <code>Good Pet</code>
