--- a/src/main/resources/execute_command.html
+++ b/src/main/resources/execute_command.html
@@ -65,7 +65,7 @@
 <body>
 <a href="/"><img src="/aikido_logo.svg" class="logo" /></a>
 <div class="container">
-    <h1>Execute command: </h1>
+    <h1>Shell Injection | Execute a command</h1>
     <form id="commandForm">
         <details>
             <summary>Examples</summary>
