--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -174,7 +174,7 @@ window.addEventListener('load', () => {
 <div class="container">
     <h2>Test different vulnerabilities: </h2>
     <div class="vuln-overview">
-        <a href="/pages/create" class="button"><b>SQL Injection</b> | Create a dog</a>
+        <a href="/pages/create" class="button"><b>SQL Injection</b> | Create a new Pet</a>
         <a href="/pages/execute" class="button"><b>Shell Injection</b> | Execute a command</a>
         <a href="/pages/request" class="button"><b>SSRF</b> | Fetch a page</a>
         <a href="/pages/read" class="button"><b>Path Traversal</b> | Read a file</a>
