--- a/src/main/resources/read_file.html
+++ b/src/main/resources/read_file.html
@@ -66,7 +66,7 @@
 <body>
 <a href="/"><img src="/aikido_logo.svg" class="logo" /></a>
 <form class="container" action="/api/read">
-    <h1>Read File: </h1>
+    <h1>Path Traversal | Read a file</h1>
     <details>
         <summary>Examples</summary>
         <code>home.txt</code>
