--- a/src/main/resources/request.html
+++ b/src/main/resources/request.html
@@ -66,7 +66,7 @@
 <body>
 <a href="/"><img src="/aikido_logo.svg" class="logo" /></a>
 <div class="container">
-    <h1>Fetch a page: </h1>
+    <h1>SSRF | Fetch a page</h1>
     <div id="urlForm">
         <details>
             <summary>Examples</summary>
