Details open on default

--- a/src/main/resources/execute_command.html
+++ b/src/main/resources/execute_command.html
@@ -67,7 +67,7 @@
 <div class="container">
     <h1>Shell Injection | Execute a command</h1>
     <form id="commandForm">
-        <details>
+        <details open>
             <summary>Examples</summary>
             <code>invalid-command-here</code>
             <code>ls -la</code>
