--- a/src/main/resources/read_file.html
+++ b/src/main/resources/read_file.html
@@ -67,7 +67,7 @@
 <a href="/"><img src="/aikido_logo.svg" class="logo" /></a>
 <form class="container" action="/api/read">
     <h1>Path Traversal | Read a file</h1>
-    <details>
+    <details open>
         <summary>Examples</summary>
         <code>home.txt</code>
         <code>2023/day2.txt</code>
