--- a/src/main/resources/request.html
+++ b/src/main/resources/request.html
@@ -68,7 +68,7 @@
 <div class="container">
     <h1>SSRF | Fetch a page</h1>
     <div id="urlForm">
-        <details>
+        <details open>
             <summary>Examples</summary>
             <code>https://aikido.dev</code>
             <code>http://localhost:7000/</code>
