--- a/src/main/resources/create.html
+++ b/src/main/resources/create.html
@@ -98,7 +98,7 @@
 <a href="/"><img src="/aikido_logo.svg" class="logo" /></a>
 <div class="container">
     <h1>SQL Injection | Create a new Pet</h1>
-    <details>
+    <details open>
         <summary>Examples</summary>
         <code>Good Pet</code>
         <code>Malicious Pet', 'Gru from the Minions') -- </code>
