--- a/src/main/resources/read_file.html
+++ b/src/main/resources/read_file.html
@@ -20,30 +20,8 @@
             border: 1px solid #ccc;
             border-radius: 4px;
         }
-
-        button {
-            background-color: #6551F3;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            width: 100%;
-            margin-bottom: 5px  ;
-        }
-
-        button:hover {
-            background-color: #24104F;
-        }
         code {
-            display: block;
-            width: auto;
-            background-color: #6551F3;
-            color: whitesmoke;
-            padding: 5px;
-            margin: 2.5px 0px;
-            border-radius: 5px;
-            font-weight: 700;
+            margin: 5px 0px;
         }
         details {
             border: 1px solid #aaa;
@@ -69,14 +47,16 @@
     <h1>Path Traversal | Read a file</h1>
     <details open>
         <summary>Examples</summary>
-        <code>home.txt</code>
-        <code>2023/day2.txt</code>
-        <code>../secrets/key.txt</code>
+        <code class="code">home.txt</code>
+        <br/>
+        <code class="code">2023/day2.txt</code>
+        <br/>
+        <code class="code">../secrets/key.txt</code>
     </details>
     <div id="readForm">
         <label for="path"><b>Path :</b></label>
         <input type="text" id="path" name="path" required>
-        <button type="submit">Read file</button>
+        <button class="btn" type="submit">Read file</button>
     </div>
 </form>
 </body>
