--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -178,7 +178,8 @@ window.addEventListener('load', () => {
     <p>You can test our rate limiting features with the following button,
         this is equivalent to running the following curl command</p>
     <code class="code">curl https://zen-demo-java.fly.dev/test_ratelimiting_1</code>
-    <button class="button" id="rate_limiting" style="display: inline;">Test rate-limiting</button> (max 3 requests / minute)
+    <button class="button" id="rate_limiting" style="display: inline;">Test rate-limiting</button>
+    <span style="color: #555; padding: 0 14px;">(max 3 requests / minute)</span>
     <code id="rate_limiting_res" class="req_result">
         <br/>
     </code>
