--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -179,7 +179,7 @@ window.addEventListener('load', () => {
         this is equivalent to running the following curl command</p>
     <code class="code">curl https://zen-demo-java.fly.dev/test_ratelimiting_1</code>
     <button class="button" id="rate_limiting" style="display: inline;">Test rate-limiting</button>
-    <span style="color: #555; padding: 0 14px;">(max 3 requests / minute)</span>
+    <span style="color: #555; padding: 0 6px;">(max 3 requests / minute)</span>
     <code id="rate_limiting_res" class="req_result">
         <br/>
     </code>
@@ -206,7 +206,8 @@ window.addEventListener('load', () => {
         <span style="width: 20px; display: inline-block;"></span>-H "user: 123456" \<br/>
         <span style="width: 20px; display: inline-block;"></span>-X GET https://zen-demo-java.fly.dev/test_user_blocking
     </code>
-    <button class="button" id="user_123456">Request with allowed user (ID: 123456)</button>
+    <button class="button" id="user_123456" style="display: inline;">Request</button>
+    <span style="color: #555; padding: 0 6px;">with allowed user (ID: 123456)</span>
     <code id="user_123456_res" class="req_result">
         <br/>
     </code>
@@ -216,7 +217,8 @@ window.addEventListener('load', () => {
         <span style="width: 20px; display: inline-block;"></span>-H "user: 789" \<br/>
         <span style="width: 20px; display: inline-block;"></span>-X GET https://zen-demo-java.fly.dev/test_user_blocking
     </code>
-    <button class="button" id="user_789">Request with blocked user (ID: 789)</button>
+    <button class="button" id="user_789" style="display: inline;">Request</button>
+    <span style="color: #555; padding: 0 6px;">with blocked user (ID: 789)</span>
     <code id="user_789_res" class="req_result">
         <br/>
     </code>
