--- a/src/main/resources/read_file.html
+++ b/src/main/resources/read_file.html
@@ -45,10 +45,13 @@
     <details open>
         <summary>Examples</summary>
         <code class="code">home.txt</code>
+        <p style="display:inline">Inside blog directory, opens home file</p>
         <br/>
         <code class="code">2023/day2.txt</code>
+        <p style="display:inline">Inside blog directory, opens a blog entry</p>
         <br/>
         <code class="code">../secrets/key.txt</code>
+        <p style="display:inline">Path traversal, opens a file outside blog directory</p>
     </details>
     <div id="readForm">
         <label for="path"><b>Path :</b></label>
