Update explainer of IP Blocking

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -226,8 +226,10 @@ window.addEventListener('load', () => {
 
 <div class="container">
     <h2>IP Blocking</h2>
-    <p>To demo IP Blocking we blocked Tor IP addresses, you can test it out by opening this site <b>with the Tor Browser.</b></p>
-    <p>This feature is also useful to block certain countries i.e. <b>geo-ip blocking</b>, or to block certain <b>malicious actors</b>.</p>
+    <p>Demo-ing the IP Blocking capabilities isn't super easy. We offer support for <b>geo-ip blocking</b>,
+    blocking of <b>malicious actor</b> and blocking <b>Tor traffic</b></p>
+    <p>We enabled the blocking of Tor traffic on this site to demo the IP Blocking capabilities as best as we could.</p>
+    → <a href="https://www.torproject.org/download/">Download Tor Browser</a>
 </div>
 <br/>
 </body>
