--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -176,7 +176,7 @@ window.addEventListener('load', () => {
 <div class="container">
     <h2>Test rate-limiting and bot blocking</h2>
     <p>You can test our rate limiting features with the following button,
-        this is equivalent to running the following curl command</p>
+        this is equivalent to running the following cURL command</p>
     <code class="code">curl https://zen-demo-java.fly.dev/test_ratelimiting_1</code>
     <button class="button" id="rate_limiting" style="display: inline;">Test rate-limiting</button>
     <span style="color: #555; padding: 0 6px;">(max 3 requests / minute)</span>
@@ -185,7 +185,10 @@ window.addEventListener('load', () => {
     </code>
     <hr>
     <p>You can test our bot blocking features with the following button,
-    this is equivalent to running the following curl command</p>
+    this is equivalent to running the following cURL command</p>
+    <p style="font-style: italic"><b>Note</b>: This only works on Firefox, Chromium-based browsers currently have an issue
+    with setting the User-Agent in a fetch request (<a href="https://issues.chromium.org/issues/40450316">see here</a>).
+    You can still test it out with the cURL command below</p>
     <code class="code">
         curl \<br/>
         <span style="width: 20px; display: inline-block;"></span>-H "User-Agent: Mozilla/5.0 (compatible; Bytespider/1.0; +http://bytespider.com/bot.html)" \<br/>
